@@ -5,34 +5,129 @@ import com.covt.converter.EncodingUtils;
 import com.covt.converter.mvt.MapboxVectorTile;
 import com.covt.converter.mvt.MvtUtils;
 import org.junit.jupiter.api.Test;
-import java.io.ByteArrayOutputStream;
+
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.sql.SQLException;
 import java.util.List;
-import java.util.zip.GZIPOutputStream;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CovtConverterTest {
-    private static final String MBTILES_FILE_NAME = "C:\\mapdata\\europe.mbtiles";
-    private static final String BING_MAP_MVT_PATH = ".\\data\\bing";
+    private static final String BING_MVT_PATH = ".\\data\\bing\\mvt";
+    private static final String BING_COVT_PATH = ".\\data\\bing\\covt";
+    private static final String OMT_MVT_PATH = ".\\data\\omt\\mvt";
+    private static final String OMT_COVT_PATH = ".\\data\\omt\\covt";
+    private static final String MAPBOX_MVT_PATH = ".\\data\\mapbox\\mvt";
+    private static final String MAPBOX_COVT_PATH = ".\\data\\mapbox\\covt";
+    private static final String AMAZON_MVT_PATH = ".\\data\\amazon\\mvt";
+    private static final String AMAZON_COVT_PATH = ".\\data\\amazon\\covt";
+    private static final String AMAZON_HERE_MVT_PATH = ".\\data\\amazon_here\\mvt";
+    private static final String AMAZON_HERE_COVT_PATH = ".\\data\\amazon_here\\covt";
+    private static final boolean SAVE_GENERATED_TILES = true;
+
+    /* Amazon Here Tile Tests ---------------------------------- */
+
+    @Test
+    public void convert_AmazonHereTiles() throws IOException {
+        var fileNames = List.of("4_8_5", "4_9_4", "5_16_10", "6_33_22", "8_132_85");
+
+        for(var fileName : fileNames){
+            System.out.println(fileName + " ------------------------------------------------------------");
+            runAmazonHereTests(fileName);
+        }
+    }
+
+    private void runAmazonHereTests(String tileId) throws IOException {
+        var mvtTile = MvtUtils.decodeMvt2(Paths.get(AMAZON_HERE_MVT_PATH, tileId + ".pbf"));
+        var mvtLayers = mvtTile.layers();
+
+        var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, true);
+
+        assertTrue(covTile.length > 0);
+
+        printStats(mvtTile, covTile);
+
+        if(SAVE_GENERATED_TILES == true){
+            Files.write(Paths.get(AMAZON_HERE_COVT_PATH, tileId + ".covt" ), covTile);
+        }
+    }
+
+    /* Amazon Tile Tests ---------------------------------- */
+
+    @Test
+    public void convert_AmazonTiles() throws IOException {
+        var fileNames = List.of("5_5_11", "5_6_21", "5_8_12", "5_16_11",
+                "6_33_21", "6_33_22", "7_68_44", "8_136_89", "9_259_176", "10_518_352", "11_1037_704");
+
+        for(var fileName : fileNames){
+            System.out.println(fileName + " ------------------------------------------------------------");
+            runAmazonTests(fileName);
+        }
+    }
+
+    private void runAmazonTests(String tileId) throws IOException {
+        var mvtTile = MvtUtils.decodeMvt2(Paths.get(AMAZON_MVT_PATH, tileId + ".pbf"));
+        var mvtLayers = mvtTile.layers();
+
+        var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, true);
+
+        assertTrue(covTile.length > 0);
+
+        printStats(mvtTile, covTile);
+        if(SAVE_GENERATED_TILES == true){
+            Files.write(Paths.get(AMAZON_COVT_PATH, tileId + ".covt" ), covTile);
+        }
+    }
+
+    /* Mapbox Tile Tests ---------------------------------- */
+
+    @Test
+    public void convert_MapboxTiles() throws IOException {
+        var fileNames = List.of("5_17_11", "6_33_21", "6_33_22", "7_67_44", "8_135_89", "9_273_178");
+
+        for(var fileName : fileNames){
+            runMapboxTests(fileName);
+        }
+    }
+
+    private void runMapboxTests(String tileId) throws IOException {
+        var mvtTile = MvtUtils.decodeMvt2(Paths.get(MAPBOX_MVT_PATH, tileId + ".pbf"));
+        var mvtLayers = mvtTile.layers();
+
+        var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, true);
+
+        assertTrue(covTile.length > 0);
+
+        printStats(mvtTile, covTile);
+        if(SAVE_GENERATED_TILES == true){
+            Files.write(Paths.get(MAPBOX_COVT_PATH, tileId + ".covt" ), covTile);
+        }
+    }
+
+    /* Bing Maps Tests --------------------------------------------------------- */
 
     @Test
     public void convert_BingMaps_Z4Tile() throws IOException {
-        var fileNames = List.of("4-8-5", "4-9-5", "4-12-6", "4-13-6");
+        var fileNames = List.of("4-8-5", "4-12-6", "4-13-6", "4-9-5");
 
         for(var fileName : fileNames){
-            runTest(fileName);
+            runBingTests(fileName);
         }
     }
 
     @Test
     public void convert_BingMaps_Z5Tiles() throws IOException {
-        var fileNames = List.of("5-16-11", "5-17-11", "5-17-10", "5-25-13", "5-26-13");
+        var fileNames = List.of("5-16-11", "5-17-11", "5-17-10", "5-25-13", "5-26-13", "5-8-12", "5-15-10");
 
         for(var fileName : fileNames){
-           runTest(fileName);
+           runBingTests(fileName);
         }
     }
 
@@ -41,16 +136,16 @@ public class CovtConverterTest {
         var fileNames = List.of("6-32-22", "6-33-22", "6-32-23", "6-32-21");
 
         for(var fileName : fileNames){
-            runTest(fileName);
+            runBingTests(fileName);
         }
     }
 
     @Test
     public void convert_BingMaps_Z7Tiles() throws IOException {
-        var fileNames = List.of("7-65-43", "7-64-44", "7-66-43", "7-66-44");
+        var fileNames = List.of("7-65-43", "7-64-44", "7-66-43", "7-66-44", "7-65-42", "7-66-42", "7-67-43");
 
         for(var fileName : fileNames){
-           runTest(fileName);
+           runBingTests(fileName);
         }
     }
 
@@ -59,141 +154,166 @@ public class CovtConverterTest {
         var fileNames = List.of("9-259-176", "9-265-170", "9-266-170", "9-266-171");
 
         for(var fileName : fileNames){
-            runTest(fileName);
-        }
-    }
-
-    private void runTest(String fileName) throws IOException {
-        var bingMvtTile = Files.readAllBytes(Paths.get(BING_MAP_MVT_PATH, fileName + ".mvt"));
-        var mvtTile = MvtUtils.decodeMvt(bingMvtTile);
-        var mvtLayers = mvtTile.layers();
-
-        var covTile = CovtConverter.convertMvtTile(mvtLayers, CovtConverter.GeometryEncoding.ICE, false);
-
-        var compressedMvtTile = gzipCompress(bingMvtTile);
-        var compressedCovTile = gzipCompress(covTile);
-
-        Files.write(Paths.get(BING_MAP_MVT_PATH, "covt", fileName + ".covt"), covTile);
-        var sizeReduction  = (1d - (double)covTile.length / bingMvtTile.length) * 100;
-        System.out.println(fileName + " ----------------------------------------------------------");
-        System.out.println(String.format("MVT size: %s, COVT size: %s, Reduction: %s",
-                bingMvtTile.length, covTile.length, sizeReduction));
-        var compressedSizeReduction  = (1d - (double)compressedCovTile.length / compressedMvtTile.length) * 100;
-        System.out.println(String.format("Compressed MVT size: %s, Compressed COVT size: %s, Reduction: %s",
-                compressedMvtTile.length, compressedCovTile.length, compressedSizeReduction));
-    }
-
-    private static byte[] gzipCompress(byte[] buffer) throws IOException {
-        try(var baos = new ByteArrayOutputStream()){
-            try(var gzipOut = new GZIPOutputStream(baos)){
-                gzipOut.write(buffer);
-            }
-            return baos.toByteArray();
+            runBingTests(fileName);
         }
     }
 
     @Test
-    public void parseCovt_Z4Tile_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        var mvtTile = MvtUtils.getMVT(MBTILES_FILE_NAME, 4, 8, 10);
+    public void convert_BingMaps_Z11Tiles() throws IOException {
+        var fileNames = List.of("11-603-769");
+
+        for(var fileName : fileNames){
+            runBingTests(fileName);
+        }
+    }
+
+
+    private void runBingTests(String tileId) throws IOException {
+        System.out.println(tileId + " ------------------------------------------");
+        var mvtTile = MvtUtils.decodeMvt2(Paths.get(BING_MVT_PATH, tileId + ".mvt"));
+        //var mvtTile2 = MvtUtils.decodeMvt(Paths.get(BING_MVT_PATH, tileId + ".mvt"));
         var mvtLayers = mvtTile.layers();
 
-        var tile = CovtConverter.convertMvtTile(mvtLayers, CovtConverter.GeometryEncoding.ICE, true);
+        var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, false);
+        assertTrue(covTile.length > 0);
+        printStats(mvtTile, covTile);
 
-        Files.write(Path.of("./data/4_8_10.covt"), tile);
+        var covTile2 = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE_MORTON, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, false);
+        assertTrue(covTile2.length > 0);
+        printStats(mvtTile, covTile2);
+
+        if(SAVE_GENERATED_TILES == true){
+            Files.write(Paths.get(BING_COVT_PATH, tileId + ".covt" ), covTile);
+        }
+    }
+
+    /* OpenMapTiles Tests --------------------------------------------------------- */
+
+    @Test
+    public void convert_OmtTileZ2_ValidCovTile() throws IOException {
+        var tileId = String.format("%s_%s_%s", 4, 8, 10);
+        runOmtTest(tileId);
     }
 
     @Test
-    public void parseCovt_Z5Tile_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        var mvtTile = MvtUtils.getMVT(MBTILES_FILE_NAME, 5, 16, 21);
-        var mvtLayers = mvtTile.layers();
-
-        var tile = CovtConverter.convertMvtTile(mvtLayers,CovtConverter.GeometryEncoding.ICE, true);
-
-        Files.write(Path.of("./data/5_16_21.covt"), tile);
+    public void convert_OmtTileZ5_ValidCovTile() throws IOException {
+        var tileId = String.format("%s_%s_%s", 5, 16, 21);
+        runOmtTest(tileId);
     }
 
     @Test
-    public void parseCovt_DifferentZ2Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(2, 2, 2 ,2, 2);
+    public void convert_OmtTilesZ2_ValidCovTile() throws IOException {
+        runOmtTests(2, 2, 2 ,2, 2);
     }
 
     @Test
-    public void parseCovt_DifferentZ3Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(3, 4, 4 ,5, 5);
+    public void convert_OmtTilesZ3_ValidCovTile() throws IOException {
+        runOmtTests(3, 4, 4 ,5, 5);
     }
 
     @Test
-    public void parseCovt_DifferentZ4Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(4, 8, 8 ,10, 10);
-        runTest(4, 3, 3 ,9, 9);
+    public void convert_OmtTilesZ4_ValidCovTile() throws IOException {
+        runOmtTests(4, 8, 8 ,10, 10);
+        runOmtTests(4, 3, 3 ,9, 9);
         /*runTest(4, 3, 3 ,10, 10);
         runTest(4, 9, 9 ,10, 10);*/
     }
 
     @Test
-    public void parseCovt_DifferentZ5Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
+    public void convert_OmtTilesZ5_ValidCovTile() throws IOException {
         //runTest(5, 15, 17, 20, 22);
-        runTest(5, 16, 17, 20, 21);
+        runOmtTests(5, 16, 17, 20, 21);
     }
 
     @Test
-    public void parseCovt_DifferentZ6Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
+    public void convert_Z6OmtTiles_ValidCovTile() throws IOException {
         //runTest(6, 32, 36, 41, 42);
-        runTest(6, 32, 34, 41, 42);
+        runOmtTests(6, 32, 34, 41, 42);
     }
 
     @Test
-    public void parseCovt_DifferentZ7Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(7, 66, 68, 83, 85);
+    public void convert_OmtTilesZ7_ValidCovTile() throws IOException {
+        runOmtTests(7, 66, 68, 83, 85);
     }
 
     @Test
-    public void parseCovt_DifferentZ8Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(8, 132, 135, 170, 171);
+    public void convert_OmtTilesZ8_ValidCovTile() throws IOException {
+        runOmtTests(8, 132, 135, 170, 171);
     }
 
     @Test
-    public void parseCovt_DifferentZ9Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(9, 264, 266, 340, 342);
+    public void convert_OmtTilesZ9_ValidCovTile() throws IOException {
+        runOmtTests(9, 264, 266, 340, 342);
     }
 
     @Test
-    public void parseCovt_DifferentZ10Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(10, 530, 533, 682, 684);
+    public void convert_OmtTilesZ10_ValidCovTile() throws IOException {
+        runOmtTests(10, 530, 533, 682, 684);
     }
 
     @Test
-    public void parseCovt_DifferentZ11Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(11, 1062, 1065, 1366, 1368);
+    public void convert_OmtTilesZ11_ValidCovTile() throws IOException {
+        runOmtTests(11, 1062, 1065, 1366, 1368);
     }
 
     @Test
-    public void parseCovt_DifferentZ12Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(12, 2130, 2134, 2733, 2734);
+    public void convert_OmtTilesZ12_ValidCovTile() throws IOException {
+        runOmtTests(12, 2130, 2134, 2733, 2734);
     }
 
     @Test
-    public void parseCovt_DifferentZ13Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(13, 4264, 4267, 5467, 5468);
+    public void convert_OmtTilesZ13_ValidCovTile() throws IOException {
+        runOmtTests(13, 4264, 4267, 5467, 5468);
     }
 
     @Test
-    public void parseCovt_DifferentZ14Tiles_ValidConvertedMvtTile() throws SQLException, IOException, ClassNotFoundException {
-        runTest(14, 8296, 8300, 10748, 10749);
+    public void convert_OmtTilesZ14_ValidCovTile() throws IOException {
+        runOmtTests(14, 8296, 8300, 10748, 10749);
     }
 
-    private static void runTest(int zoom, int minX, int maxX, int minY, int maxY) throws SQLException, IOException, ClassNotFoundException {
+    private static void runOmtTest(String tileId) throws IOException {
+        var mvtFilePath = Paths.get(OMT_MVT_PATH, tileId + ".mvt" );
+        var mvtTile = MvtUtils.decodeMvt2(mvtFilePath);
+        var mvtLayers = mvtTile.layers();
+
+        var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, true);
+
+        assertTrue(covTile.length > 0);
+
+        if(SAVE_GENERATED_TILES == true){
+            Files.write(Paths.get(OMT_COVT_PATH, tileId + ".covt" ), covTile);
+        }
+    }
+
+    private static void runOmtTests(int zoom, int minX, int maxX, int minY, int maxY) throws IOException {
         var ratios = 0d;
         var counter = 0;
         for (var x = minX; x <= maxX; x++) {
             for (var y = minY; y <= maxY; y++) {
-                var mvtTile = MvtUtils.getMVT(MBTILES_FILE_NAME, zoom, x, y);
+                var tileId = String.format("%s_%s_%s", zoom, x, y);
+                var mvtFilePath = Paths.get(OMT_MVT_PATH, tileId + ".mvt" );
+                var mvtTile = MvtUtils.decodeMvt(mvtFilePath);
                 var mvtLayers = mvtTile.layers();
 
-                var useIce = zoom != 13 && zoom != 14;
-                var covtTile = CovtConverter.convertMvtTile(mvtLayers, CovtConverter.GeometryEncoding.ICE, true);
+                var geometryEncoding = (zoom != 13 && zoom != 14) ? CovtConverter.GeometryEncoding.ICE :
+                        CovtConverter.GeometryEncoding.PLAIN;
+                var covTile = CovtConverter.convertMvtTile(mvtLayers, mvtTile.tileExtent(),
+                        CovtConverter.GeometryEncoding.ICE, CovtConverter.VertexBufferCompression.FAST_PFOR_DELTA,
+                        CovtConverter.TopologyStreamsCompression.FAST_PFOR_DELTA, true);
 
-                ratios += printStats(mvtTile, covtTile);
+                assertTrue(covTile.length > 0);
+
+                if(SAVE_GENERATED_TILES == true){
+                    Files.write(Paths.get(OMT_COVT_PATH, tileId + ".covt"), covTile);
+                }
+
+                ratios += printStats(mvtTile, covTile);
                 counter++;
             }
         }
@@ -206,9 +326,25 @@ public class CovtConverterTest {
         System.out.println(String.format("MVT size: %s, Gzip MVT size: %s", mvtTile.mvtSize(), mvtTile.gzipCompressedMvtSize()));
         System.out.println(String.format("COVT size: %s, Gzip COVT size: %s", covtTile.length, covtGzipBuffer.length));
         System.out.println(String.format("Ratio uncompressed: %s, Ratio compressed: %s",
-                ((double)mvtTile.mvtSize()) / covtTile.length, ((double)mvtTile.gzipCompressedMvtSize()) / covtGzipBuffer.length));
-        var compressionRatio = (1- (1/( ((double)mvtTile.mvtSize()) / covtTile.length)   ))*100;
-        System.out.println(String.format("Ratio compressed: %s", compressionRatio));
+                ((double)mvtTile.mvtSize())/covtTile.length, ((double)mvtTile.gzipCompressedMvtSize())/covtGzipBuffer.length));
+        var compressionRatio = (1-(1/(((double)mvtTile.mvtSize())/covtTile.length)))*100;
+        var compressionRatioCompressed = (1-(1/(((double)mvtTile.gzipCompressedMvtSize())/covtGzipBuffer.length)))*100;
+        System.out.println(String.format("Reduction uncompressed: %s%%, Reduction compressed: %s%%", compressionRatio, compressionRatioCompressed));
+        System.out.println("------------------------------------------------------------");
+        return compressionRatio;
+    }
+
+    private static double printStats2(MapboxVectorTile mvtTile, byte[] covtTile, byte[] mvtTileBuffer) throws IOException {
+        var covtGzipBuffer = EncodingUtils.gzipCompress(covtTile);
+        var mvtGzipBuffer = EncodingUtils.gzipCompress(mvtTileBuffer);
+        System.out.println(String.format("MVT size: %s, Gzip MVT size: %s", mvtTile.mvtSize(), mvtGzipBuffer.length));
+        System.out.println(String.format("COVT size: %s, Gzip COVT size: %s", covtTile.length, covtGzipBuffer.length));
+        System.out.println(String.format("Ratio uncompressed: %s, Ratio compressed: %s",
+                ((double)mvtTile.mvtSize())/covtTile.length, ((double)mvtTile.gzipCompressedMvtSize())/covtGzipBuffer.length));
+        var compressionRatio = (1-(1/(((double)mvtTile.mvtSize())/covtTile.length)))*100;
+        var compressionRatioCompressed = (1-(1/(((double)mvtTile.gzipCompressedMvtSize())/covtGzipBuffer.length)))*100;
+        System.out.println(String.format("Reduction uncompressed: %s%%, Reduction compressed: %s%%", compressionRatio, compressionRatioCompressed));
+        System.out.println("------------------------------------------------------------");
         return compressionRatio;
     }
 }
